# Packet-Structure

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main1.cpp  test.txt  udp_client.cpp  udp_server.cpp
include/TCP/: TCPClient.h  TCPServer.h
include/UDP/: UDPClient.h  UDPServer.h
resources/: Data.rar
resources/Data/: DataSample.txt  Packet.txt  PacketDetail.xlsx  test.txt
src/: main.cpp
src/client/: Packet.txt  TCPClient.cpp  UDPClient.cpp
src/server/: TCPServer.cpp  UDPServer.cpp
